# Project-chat-semestr--2

./: .gitignore  README.md  package-lock.json
backend/: package-lock.json  package.json  server.js
server/: CMakeLists.txt  DataBaseManager.h  Logger.h  main.cpp
server1/: CMakeLists.txt  DataBaseManager.h  httplib.h  main.cpp
server1/include/: httplib.h
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  App.test.jsx  main.jsx
ui/src/component/: Chat.jsx  JoinComponent.jsx
ui/src/redux/: mainSlicer.js  store.js
ui/src/scss/: chat.scss  join.scss  style.scss
